[gd_scene load_steps=19 format=2]

[ext_resource path="res://booky/booky.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/book.png" type="Texture" id=2]
[ext_resource path="res://ui/narration_box.tscn" type="PackedScene" id=3]
[ext_resource path="res://work_area/work_area.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/game_over.gd" type="Script" id=5]
[ext_resource path="res://booky/gameover_booky.gd" type="Script" id=6]
[ext_resource path="res://target/word_target.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/Retro4.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://work_area/gameover_work_area.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 509.886, 5.29836 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 300, 10 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 50, 50 )

[sub_resource type="Animation" id=12]
length = 0.3
tracks/0/type = "bezier"
tracks/0/path = NodePath("NarrationBox:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[sub_resource type="DynamicFont" id=7]
size = 32
outline_size = 3
outline_color = Color( 0.270588, 0.156863, 0.235294, 1 )
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[sub_resource type="DynamicFont" id=13]
size = 96
outline_size = 6
outline_color = Color( 0.270588, 0.156863, 0.235294, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=14]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=15]
resource_name = "PressAnyKey"
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("PressAnyKey:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("PressAnyKey:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("PressAnyKey:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("PressAnyKey:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[node name="Level" type="Node"]
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WordTarget" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 512, 250 )
word = "CONGRATULATIONS"

[node name="WorkArea" parent="." instance=ExtResource( 4 )]
position = Vector2( 512, 480 )
script = ExtResource( 9 )
word = "CONGRATULATIONS"

[node name="Bounds" type="StaticBody2D" parent="."]
position = Vector2( 512, 300 )
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds"]
position = Vector2( 0, -294.529 )
rotation = 3.14159
shape = SubResource( 9 )
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Bounds"]
position = Vector2( -1.57254, 293.435 )
shape = SubResource( 9 )
one_way_collision = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Bounds"]
position = Vector2( 505, 0 )
rotation = 4.71239
shape = SubResource( 10 )
one_way_collision = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Bounds"]
position = Vector2( -505, 1.41422 )
rotation = 1.5708
shape = SubResource( 10 )
one_way_collision = true

[node name="Booky" type="KinematicBody2D" parent="."]
position = Vector2( 406.469, -69.9212 )
collision_layer = 2
collision_mask = 0
script = ExtResource( 6 )

[node name="Booky" parent="Booky" instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Booky"]
shape = SubResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/NarrationFadeOut = SubResource( 12 )

[node name="NarrationBox" parent="." instance=ExtResource( 3 )]
margin_bottom = 168.0
lines = [ "The Dust Bunnies have been tamed! your book is safe (for now)!" ]

[node name="NoClick" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 150
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeContainer" type="VBoxContainer" parent="MarginContainer"]
visible = false
margin_left = 351.0
margin_top = 150.0
margin_right = 673.0
margin_bottom = 580.0
size_flags_horizontal = 4
theme = SubResource( 8 )
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/TimeContainer"]
margin_top = 147.0
margin_right = 322.0
margin_bottom = 173.0
text = "Your total time is "
align = 1

[node name="Time" type="Label" parent="MarginContainer/TimeContainer"]
margin_top = 177.0
margin_right = 322.0
margin_bottom = 253.0
custom_fonts/font = SubResource( 13 )
text = "10:13"
align = 1

[node name="Label2" type="Label" parent="MarginContainer/TimeContainer"]
margin_top = 257.0
margin_right = 322.0
margin_bottom = 283.0
text = "Thank you for playing our game :)"
align = 1

[node name="PressAnyKey" type="Label" parent="MarginContainer"]
visible = false
margin_left = 387.0
margin_top = 554.0
margin_right = 637.0
margin_bottom = 580.0
size_flags_horizontal = 4
size_flags_vertical = 8
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Press any key to continue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer"]
autoplay = "PressAnyKey"
anims/PressAnyKey = SubResource( 15 )
